# c_infrastructure

./: CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
1/: README.md  main.c
10/: CPPLINT.cfg  Makefile
10/linters/: run.sh
10/linters/cpplint/: cpplint.py
10/project/include/: utils.h
10/project/src/: main.c  utils.c
11/: README.md  main.c
12/: README.md  test.c
2/: main.c  print.c
3/include/: print.h
3/src/: main.c  print.c
4/: main.c
4/hello/: hello.c  hello.h
5/: README.md  main.c
6/: Makefile  README.md  main.c
7/: CMakeLists.txt  main.c
7/print/: print.c  print.h
8/: CMakeLists.txt
8/print/: CMakeLists.txt  print.c
9/: CMakeLists.txt  README.md  main.c
9/fib_lib/: CMakeLists.txt  fib.c  fib.h
9/tests/: CMakeLists.txt  test_fib.cpp
numbers_counter/: CMakeLists.txt
numbers_counter/include/: numbers_counter.hpp
numbers_counter/src/: numbers_counter.cpp
numbers_counter/tests/: CMakeLists.txt  test.cpp
src/: main.cpp
